Fix <a> tag lines to have equal spacing between lines
The lines with <a> tag had 5px extra line spacing than lines without links due to padding for <a> tag.

--- a/_sass/base/_reset.scss
+++ b/_sass/base/_reset.scss
@@ -93,7 +93,7 @@ a {
 
     position: relative;
     display: inline-block;
-    padding: 5px 1px;
+    padding: 0px 1px;
     transition: color ease 0.3s;
     
     /* Hover animation effect for all buttons */
